@@ -25,7 +25,7 @@
     mod_auth_dbm.c<br />
      <a href="module-dict.html#ModuleIdentifier"
     rel="Help"><strong>Module Identifier:</strong></a>
-    dbm_auth_module</p>
+    auth_dbm_module</p>
 
     <h2>Summary</h2>
 
