@@ -25,7 +25,7 @@
     mod_auth_digest.c<br />
      <a href="module-dict.html#ModuleIdentifier"
     rel="Help"><strong>Module Identifier:</strong></a>
-    digest_auth_module</p>
+    auth_digest_module</p>
 
     <h2>Summary</h2>
 
